Fixing flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,11 @@ html, body {
   width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
-  @apply text-darkGrey dark:text-[#eeeeee] bg-white dark:bg-darkGrey
 }
 
-body {
+.background {
   background-repeat: no-repeat;
-  background-position: -34.1vw -31vh;
+  background-position: -34.1vw -32.5vw;
   background-size: 210vw 129vw;
   background-attachment: fixed;
 }
